src/main/java/com/example/stream/spring/courses/reactive/example/model/error/Success.java
package com.example.stream.spring.courses.reactive.example.model.error;

public sealed interface Success permits BuildingSuccess {
}
